Fix todo list overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,14 +4,20 @@ body {
   margin: 0;
 }
 
+header {
+  height: 55px;
+}
+
 main {
+  height: 100%;
+  max-height: calc(100% - 55px);
   padding-top: 35px;
 }
 
 .app {
   position: relative;
   max-width: 762px;
-  min-height: 100vh;
+  height: 100vh;
   margin: auto;
 }
 
@@ -66,11 +72,7 @@ main {
 }
 
 .menu {
-  position: absolute;
-  left: 12px;
-  right: 12px;
-  bottom: 0;
-  padding: 12px 0 42px;
+  padding: 12px 0 60px;
   background-color: #fff;
   box-shadow: 0 -24px 18px 6px #fff;
 }
@@ -78,8 +80,9 @@ main {
 .todo-list {
   margin: 0;
   padding: 0;
-  padding-top: 16px;
+  padding: 16px 0 32px;
   list-style: none;
+  overflow-y: auto;
 }
 
 .todo-item {
@@ -114,6 +117,10 @@ main {
 .task-form {
   width: 95%;
   padding-top: 25px;
+}
+
+.mh-none {
+  max-height: none;
 }
 
 @media (min-width: 576px) {
